src/objects/ProductReview__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ProductReview</label>
    <nameField>
        <label>ProductReview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductReviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>